ios/include/FlutterFilamentApi.h

typedef int32_t EntityId;
FLUTTER_PLUGIN_EXPORT const void* create_filament_viewer(const void* const context, const ResourceLoaderWrapper* const loader, void* const platform, const char* uberArchivePath);
FLUTTER_PLUGIN_EXPORT void* get_asset_manager(const void* const viewer);
FLUTTER_PLUGIN_EXPORT void create_render_target(const void* const viewer, intptr_t texture, uint32_t width, uint32_t height);
FLUTTER_PLUGIN_EXPORT void clear_background_image(const void* const viewer);
FLUTTER_PLUGIN_EXPORT void set_background_image(const void* const viewer, const char *path, bool fillHeight);
FLUTTER_PLUGIN_EXPORT void set_background_image_position(const void* const viewer, float x, float y, bool clamp);
FLUTTER_PLUGIN_EXPORT void set_background_color(const void* const viewer, const float r, const float g, const float b, const float a);
FLUTTER_PLUGIN_EXPORT void load_skybox(const void* const viewer, const char *skyboxPath);
FLUTTER_PLUGIN_EXPORT void load_ibl(const void* const viewer, const char *iblPath, float intensity);
FLUTTER_PLUGIN_EXPORT void remove_skybox(const void* const viewer);
FLUTTER_PLUGIN_EXPORT void remove_ibl(const void* const viewer);
FLUTTER_PLUGIN_EXPORT EntityId add_light(const void* const viewer, uint8_t type, float colour, float intensity, float posX, float posY, float posZ, float dirX, float dirY, float dirZ, bool shadows);
FLUTTER_PLUGIN_EXPORT void remove_light(const void* const viewer, EntityId entityId);
FLUTTER_PLUGIN_EXPORT void clear_lights(const void* const viewer);
FLUTTER_PLUGIN_EXPORT EntityId load_glb(void *assetManager, const char *assetPath, bool unlit);
FLUTTER_PLUGIN_EXPORT EntityId load_gltf(void *assetManager, const char *assetPath, const char *relativePath);
FLUTTER_PLUGIN_EXPORT bool set_camera(const void* const viewer, EntityId asset, const char *nodeName);
FLUTTER_PLUGIN_EXPORT void render(
					     const void* const viewer, 
					     uint64_t frameTimeInNanos, 
					     void* pixelBuffer, 
					     void (*callback)(void *buf, size_t size, void *data), 
					     void* data
					 );