lib/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int init_dart_api_dl(
    ffi.Pointer<ffi.Void> data,
  ) {
    return _init_dart_api_dl(
      data,
    );
  }

  late final _init_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'init_dart_api_dl');
  late final _init_dart_api_dl =
      _init_dart_api_dlPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void register_filament_port(
    int port,
  ) {
    return _register_filament_port(
      port,
    );
  }

  late final _register_filament_portPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
          'register_filament_port');
  late final _register_filament_port =
      _register_filament_portPtr.asFunction<void Function(int)>();

  ffi.Pointer<ffi.Void> create_filament_viewer(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<
            ffi.NativeFunction<ResourceBuffer Function(ffi.Pointer<ffi.Char>)>>
        loadResource,
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Uint32)>> freeResource,
  ) {
    return _create_filament_viewer(
      context,
      loadResource,
      freeResource,
    );
  }

  late final _create_filament_viewerPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ResourceBuffer Function(ffi.Pointer<ffi.Char>)>>,
                  ffi.Pointer<
                      ffi.NativeFunction<ffi.Void Function(ffi.Uint32)>>)>>(
      'create_filament_viewer');
  late final _create_filament_viewer = _create_filament_viewerPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ResourceBuffer Function(ffi.Pointer<ffi.Char>)>>,
          ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Uint32)>>)>();

  renderCallback make_render_callback() {
    return _make_render_callback();
  }

  late final _make_render_callbackPtr =
      _lookup<ffi.NativeFunction<renderCallback Function()>>(
          'make_render_callback');
  late final _make_render_callback =
      _make_render_callbackPtr.asFunction<renderCallback Function()>();

  void delete_filament_viewer(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _delete_filament_viewer(
      viewer,
    );
  }

  late final _delete_filament_viewerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'delete_filament_viewer');
  late final _delete_filament_viewer = _delete_filament_viewerPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> get_asset_manager(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _get_asset_manager(
      viewer,
    );
  }

  late final _get_asset_managerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('get_asset_manager');
  late final _get_asset_manager = _get_asset_managerPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void create_render_target(
    ffi.Pointer<ffi.Void> viewer,
    int textureId,
    int width,
    int height,
  ) {
    return _create_render_target(
      viewer,
      textureId,
      width,
      height,
    );
  }

  late final _create_render_targetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Uint32,
              ffi.Uint32)>>('create_render_target');
  late final _create_render_target = _create_render_targetPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int, int, int)>();

  void clear_background_image(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _clear_background_image(
      viewer,
    );
  }

  late final _clear_background_imagePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'clear_background_image');
  late final _clear_background_image = _clear_background_imagePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void set_background_image(
    ffi.Pointer<ffi.Void> viewer,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _set_background_image(
      viewer,
      path,
    );
  }

  late final _set_background_imagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('set_background_image');
  late final _set_background_image = _set_background_imagePtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  void set_background_image_position(
    ffi.Pointer<ffi.Void> viewer,
    double x,
    double y,
    int clamp,
  ) {
    return _set_background_image_position(
      viewer,
      x,
      y,
      clamp,
    );
  }

  late final _set_background_image_positionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Int)>>('set_background_image_position');
  late final _set_background_image_position = _set_background_image_positionPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double, double, int)>();

  void set_background_color(
    ffi.Pointer<ffi.Void> viewer,
    double r,
    double g,
    double b,
    double a,
  ) {
    return _set_background_color(
      viewer,
      r,
      g,
      b,
      a,
    );
  }

  late final _set_background_colorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Float, ffi.Float)>>('set_background_color');
  late final _set_background_color = _set_background_colorPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, double, double, double, double)>();

  void load_skybox(
    ffi.Pointer<ffi.Void> viewer,
    ffi.Pointer<ffi.Char> skyboxPath,
  ) {
    return _load_skybox(
      viewer,
      skyboxPath,
    );
  }

  late final _load_skyboxPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>('load_skybox');
  late final _load_skybox = _load_skyboxPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  void load_ibl(
    ffi.Pointer<ffi.Void> viewer,
    ffi.Pointer<ffi.Char> iblPath,
    double intensity,
  ) {
    return _load_ibl(
      viewer,
      iblPath,
      intensity,
    );
  }

  late final _load_iblPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Float)>>('load_ibl');
  late final _load_ibl = _load_iblPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, double)>();

  void remove_skybox(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _remove_skybox(
      viewer,
    );
  }

  late final _remove_skyboxPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'remove_skybox');
  late final _remove_skybox =
      _remove_skyboxPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void remove_ibl(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _remove_ibl(
      viewer,
    );
  }

  late final _remove_iblPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'remove_ibl');
  late final _remove_ibl =
      _remove_iblPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int add_light(
    ffi.Pointer<ffi.Void> viewer,
    int type,
    double colour,
    double intensity,
    double posX,
    double posY,
    double posZ,
    double dirX,
    double dirY,
    double dirZ,
    int shadows,
  ) {
    return _add_light(
      viewer,
      type,
      colour,
      intensity,
      posX,
      posY,
      posZ,
      dirX,
      dirY,
      dirZ,
      shadows,
    );
  }

  late final _add_lightPtr = _lookup<
      ffi.NativeFunction<
          EntityId Function(
              ffi.Pointer<ffi.Void>,
              ffi.Uint8,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Int)>>('add_light');
  late final _add_light = _add_lightPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int, double, double, double, double,
          double, double, double, double, int)>();

  void remove_light(
    ffi.Pointer<ffi.Void> viewer,
    int entityId,
  ) {
    return _remove_light(
      viewer,
      entityId,
    );
  }

  late final _remove_lightPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>>('remove_light');
  late final _remove_light =
      _remove_lightPtr.asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  void clear_lights(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _clear_lights(
      viewer,
    );
  }

  late final _clear_lightsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'clear_lights');
  late final _clear_lights =
      _clear_lightsPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int load_glb(
    ffi.Pointer<ffi.Void> assetManager,
    ffi.Pointer<ffi.Char> assetPath,
    int unlit,
  ) {
    return _load_glb(
      assetManager,
      assetPath,
      unlit,
    );
  }

  late final _load_glbPtr = _lookup<
      ffi.NativeFunction<
          EntityId Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('load_glb');
  late final _load_glb = _load_glbPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)>();

  int load_gltf(
    ffi.Pointer<ffi.Void> assetManager,
    ffi.Pointer<ffi.Char> assetPath,
    ffi.Pointer<ffi.Char> relativePath,
  ) {
    return _load_gltf(
      assetManager,
      assetPath,
      relativePath,
    );
  }

  late final _load_gltfPtr = _lookup<
      ffi.NativeFunction<
          EntityId Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('load_gltf');
  late final _load_gltf = _load_gltfPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  int set_camera(
    ffi.Pointer<ffi.Void> viewer,
    int asset,
    ffi.Pointer<ffi.Char> nodeName,
  ) {
    return _set_camera(
      viewer,
      asset,
      nodeName,
    );
  }

  late final _set_cameraPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, EntityId,
              ffi.Pointer<ffi.Char>)>>('set_camera');
  late final _set_camera = _set_cameraPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();

  void render(
    ffi.Pointer<ffi.Void> viewer,
    int frameTimeInNanos,
  ) {
    return _render(
      viewer,
      frameTimeInNanos,
    );
  }

  late final _renderPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint64)>>('render');
  late final _render =
      _renderPtr.asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();
